// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Actions Comments actions should match their snapshot 1`] = `
Object {
  "id": "someId",
  "type": "SET_SELECTED_COMMENT_ID",
}
`;

exports[`Actions Document actions Should match their snapshots 1`] = `Array []`;

exports[`Actions Document actions Should match their snapshots 2`] = `
Object {
  "canEdit": true,
  "canHideRedaction": true,
  "canHideWatermark": true,
  "type": "SN_DOCVEWER_DOCUMENT_PERMISSIONS_RECEIVED",
}
`;

exports[`Actions Document actions Should match their snapshots 3`] = `
Object {
  "document": Object {
    "documentName": "doc",
  },
  "type": "SN_DOCVIEWER_DOCUMENT_DATA_RECEIVED",
}
`;

exports[`Actions Document actions Should match their snapshots 4`] = `
Object {
  "error": Object {
    "message": "Error :(",
  },
  "type": "SN_DOCVIEWER_DOCUMENT_DATA_RECEIVE_ERROR",
}
`;

exports[`Actions Document actions Should match their snapshots 5`] = `
Object {
  "inject": [Function],
  "type": "SN_POLL_DOCUMENT_DATA_INJECTABLE_ACTION",
}
`;

exports[`Actions Document actions Should match their snapshots 6`] = `
Object {
  "shapeGuid": "123456",
  "shapeType": "annotations",
  "type": "SN_DOCVIEWER_DOCUMENT_REMOVE_SHAPE",
}
`;

exports[`Actions Document actions Should match their snapshots 7`] = `
Object {
  "type": "SN_DOCVIEWER_DOCUMENT_RESET_DOCUMENT",
}
`;

exports[`Actions Document actions Should match their snapshots 8`] = `
Object {
  "degree": -90,
  "pages": Array [
    Object {
      "index": 1,
      "size": Object {
        "height": 12,
        "width": 12,
      },
    },
  ],
  "type": "SN_DOCVEWER_DOCUMENT_ROTATE_SHAPES_FOR_PAGES",
}
`;

exports[`Actions Document actions Should match their snapshots 9`] = `
Object {
  "inject": [Function],
  "type": "SN_DOCVIEWER_SAVE_CHANGES_INJECTABLE_ACTION",
}
`;

exports[`Actions Document actions Should match their snapshots 10`] = `
Object {
  "error": Object {
    "message": "Error",
  },
  "type": "SN_DOCVEWER_DOCUMENT_SAVE_CHANGES_ERROR",
}
`;

exports[`Actions Document actions Should match their snapshots 11`] = `
Object {
  "type": "SN_DOCVEWER_DOCUMENT_SAVE_CHANGES_REQUEST",
}
`;

exports[`Actions Document actions Should match their snapshots 12`] = `
Object {
  "type": "SN_DOCVEWER_DOCUMENT_SAVE_CHANGES_SUCCESS",
}
`;

exports[`Actions Document actions Should match their snapshots 13`] = `
Object {
  "pollInterval": 1000,
  "type": "SN_DOCVIEWER_DOCUMENT_SET_POLL_INTERVAL",
}
`;

exports[`Actions Document actions Should match their snapshots 14`] = `
Object {
  "shapeData": Object {
    "guid": "123",
    "h": 1,
    "imageIndex": 1,
    "w": 1,
    "x": 1,
    "y": 1,
  },
  "shapeGuid": "123456",
  "shapeType": "redactions",
  "type": "SN_DOCVIEWER_DOCUMENT_UPDATE_SHAPE",
}
`;

exports[`Actions Localization actions Should match their snapshots 1`] = `
Object {
  "localization": Object {
    "download": "Letöltés",
  },
  "type": "SN_DOCVIEWER_SET_LOCALIZATION",
}
`;

exports[`Actions PreviewImages actions Should match their snapshots 1`] = `
Object {
  "imageData": Array [],
  "type": "SN_DOCVIEWER_PREVIEWS_IMAGES_RECEIVED",
}
`;

exports[`Actions PreviewImages actions Should match their snapshots 2`] = `
Object {
  "error": "Error :(",
  "type": "SN_DOCVIEWER_PREVIEWS_IMAGES_RECEIVE_ERROR",
}
`;

exports[`Actions PreviewImages actions Should match their snapshots 3`] = `
Object {
  "documentData": Object {
    "documentName": "Document",
  },
  "type": "SN_DOCVIEWER_PREVIEWS_GET_IMAGES",
}
`;

exports[`Actions PreviewImages actions Should match their snapshots 4`] = `
Object {
  "inject": [Function],
  "type": "SN_GET_AVAILABLE_IMAGES_INJECTABLE_ACTION",
}
`;

exports[`Actions PreviewImages actions Should match their snapshots 5`] = `
Object {
  "inject": [Function],
  "type": "SN_DOCVIEWER_PREVIEW_AVAILABLE_INJECTABLE_ACTION",
}
`;

exports[`Actions PreviewImages actions Should match their snapshots 6`] = `
Object {
  "documentData": Object {
    "documentName": "Document",
  },
  "page": 3,
  "type": "SN_DOCVIEWER_PREVIEWS_PREVIEW_AVAILABLE",
  "version": "V1.0A",
}
`;

exports[`Actions PreviewImages actions Should match their snapshots 7`] = `
Object {
  "error": "error :(",
  "type": "SN_DOCVIEWER_PREVIEWS_PREVIEW_AVAILABLE_ERROR",
}
`;

exports[`Actions PreviewImages actions Should match their snapshots 8`] = `
Object {
  "documentData": Object {
    "documentName": "Document",
  },
  "imageData": Object {
    "Height": 200,
    "Index": 1,
    "Width": 320,
  },
  "page": 3,
  "type": "SN_DOCVIEWER_PREVIEWS_PREVIEW_AVAILABLE_RECEIVED",
  "version": "V1.0A",
}
`;

exports[`Actions PreviewImages actions Should match their snapshots 9`] = `
Object {
  "type": "SN_DOCVIEWER_PREVIEWS_PREVIEW_NOT_AVAILABLE_RECEIVED",
}
`;

exports[`Actions PreviewImages actions Should match their snapshots 10`] = `
Object {
  "amount": 90,
  "imageIndexes": Array [
    1,
  ],
  "type": "SN_DOCVIEWER_PREVIEWS_IMAGES_ROTATE",
}
`;

exports[`Actions PreviewImages actions Should match their snapshots 11`] = `
Object {
  "pollInterval": 1000,
  "type": "SN_DOCVIEWER_DOCUMENT_PAGE_SET_POLL_INTERVAL",
}
`;

exports[`Actions Viewer Actions Should match their snapshots 1`] = `
Object {
  "activePages": Array [
    1,
    2,
    3,
  ],
  "type": "SN_DOCVIEWER_DOCUMENT_VIEWER_SET_PAGE",
}
`;

exports[`Actions Viewer Actions Should match their snapshots 2`] = `
Object {
  "customZoomLevel": 3,
  "defaultModeOnZero": "fit",
  "type": "SN_DOCVIEWER_DOCUMENT_VIEWER_SET_CUSTOM_ZOOM_LEVEL",
}
`;

exports[`Actions Viewer Actions Should match their snapshots 3`] = `
Object {
  "fitRelativeZoomLevel": 2,
  "type": "SN_DOCVIEWER_DOCUMENT_VIEWER_SET_FIT_RELATIVE_ZOOM_LEVEL",
}
`;

exports[`Actions Viewer Actions Should match their snapshots 4`] = `
Object {
  "isVisible": true,
  "type": "SN_DOCVIEWER_DOCUMENT_VIEWER_SET_REDACTION",
}
`;

exports[`Actions Viewer Actions Should match their snapshots 5`] = `
Object {
  "isVisible": true,
  "type": "SN_DOCVIEWER_DOCUMENT_VIEWER_SET_SHAPES",
}
`;

exports[`Actions Viewer Actions Should match their snapshots 6`] = `
Object {
  "isVisible": true,
  "type": "SN_DOCVIEWER_DOCUMENT_VIEWER_SET_THUMBNAILS",
}
`;

exports[`Actions Viewer Actions Should match their snapshots 7`] = `
Object {
  "isVisible": true,
  "type": "SN_DOCVIEWER_DOCUMENT_VIEWER_SET_WATERMARK",
}
`;

exports[`Actions Viewer Actions Should match their snapshots 8`] = `
Object {
  "type": "SN_DOCVIEWER_DOCUMENT_VIEWER_SET_ZOOM_MODE",
  "zoomMode": "fit",
}
`;
